--- a/src/main/resources/static/themes/css/raster.css
+++ b/src/main/resources/static/themes/css/raster.css
@@ -22,11 +22,15 @@
   width: 83px;
 }
 
-.m1, .m2, .m2m, .m3, .m3m, .m4, .m4m, .m5, .m5m, .m6, .m6m {
+.m7, .m7m {
+  width: 68px;
+}
+
+.m1, .m2, .m2m, .m3, .m3m, .m4, .m4m, .m5, .m5m, .m6, .m6m, .m7, .m7m {
   float: left;
   margin-bottom: 10px;
 }
 
-.m2m, .m3m, .m4m, .m5m, .m6m {
+.m2m, .m3m, .m4m, .m5m, .m6m, .m7m {
   margin-right: 20px;
 }
