Daten via Rest-URL in Tabelle laden

--- a/src/main/resources/static/themes/css/grid.css
+++ b/src/main/resources/static/themes/css/grid.css
@@ -54,7 +54,7 @@ th.active .arrow {
   border-bottom: 4px solid #fff;
 }
 
-.arrow.dsc {
+.arrow.desc {
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
   border-top: 4px solid #fff;
