Editierdialog mit Rückgabenachrichtenverarbeitung, Tabelle neu Laden nach erfolgreichem Speichern

--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -79,6 +79,10 @@ button.info {
   background-color: #00529B;
 }
 
+button.info.disabled {
+  background-color: #637A8E;
+}
+
 button:hover {
   cursor: pointer;
 }
