Pflichtfelder kennzeichnen beim Editieren und Speichern-Button ausgrauen, wenn nicht alle gefüllt sind

--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -81,6 +81,8 @@ button.info {
 
 button.info.disabled {
   background-color: #637A8E;
+  box-shadow: none;
+  cursor: default;
 }
 
 button:hover {
