--- a/src/main/resources/static/themes/css/style.css
+++ b/src/main/resources/static/themes/css/style.css
@@ -34,7 +34,7 @@ label {
   font-size: 15px;
 }
 
-input, select {
+input, select, textarea {
   border-color: #80ccff;
   border-style: solid;
   border-width: 1px;
@@ -115,4 +115,3 @@ select {
 ::-moz-selection {
   background: #a8ffab;
 }
-
