Funktionalität für Reparaturaufträge Ansehen/Bearbeiten/Löschen hinzugefügt
Styling für Checkboxen hinzugefügt

--- a/src/main/resources/static/themes/css/dialog.css
+++ b/src/main/resources/static/themes/css/dialog.css
@@ -22,6 +22,7 @@
   font-family: Helvetica, Arial, sans-serif;
   height: auto;
   margin: 0px auto;
+  max-height: 600px;
   overflow: auto;
   padding: 20px 30px;
   transition: all .3s ease;
