Show Username and logoutlink and profilelink, add session timeout of 45m

--- a/src/main/resources/static/themes/css/style.css
+++ b/src/main/resources/static/themes/css/style.css
@@ -63,6 +63,13 @@ input.success {
   display: none;
 }
 
+.logoutLink {
+  float: right;
+  height: 20px;
+  color: #1A8CFF;
+  padding-right: 5px;
+}
+
 #navigation {
   background-color: #CEC319;
   padding: 5 5 5 5;
