--- a/src/main/resources/static/themes/css/dialog.css
+++ b/src/main/resources/static/themes/css/dialog.css
@@ -26,7 +26,7 @@
   overflow: auto;
   padding: 20px 30px;
   transition: all .3s ease;
-  width: 600px;
+  width: 650px;
 }
 
 .dialog-header h3 {
@@ -35,7 +35,9 @@
 }
 
 .dialog-body {
-  margin: 20px 0;
+  margin: 0 0;
+  max-height: 400px;
+  overflow: auto;
 }
 
 .dialog-default-button {
