--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -29,6 +29,11 @@ button.edit {
   -webkit-mask: url("../icons/edit.svg") no-repeat center;
 }
 
+button.euro {
+  mask: url("../icons/euro.svg") no-repeat center;
+  -webkit-mask: url("../icons/euro.svg") no-repeat center;
+}
+
 button.error {
   background-color: #D8000C;
 }
@@ -48,9 +53,19 @@ button.kunde {
   -webkit-mask: url("../icons/kunde.svg") no-repeat center;
 }
 
+button.minus {
+  mask: url("../icons/minus.svg") no-repeat center;
+  -webkit-mask: url("../icons/minus.svg") no-repeat center;
+}
+
 button.ok {
-  mask: url("../icons/ok.svg") no-repeat center;
-  -webkit-mask: url("../icons/ok.svg") no-repeat center;
+  mask: url("../icons/ok_.svg") no-repeat center;
+  -webkit-mask: url("../icons/ok_.svg") no-repeat center;
+}
+
+button.ok2 {
+  mask: url("../icons/ok2.svg") no-repeat center;
+  -webkit-mask: url("../icons/ok2.svg") no-repeat center;
 }
 
 button.open-new-tab {
@@ -78,7 +93,8 @@ button.zahnrad {
   -webkit-mask: url("../icons/zahnrad.svg") no-repeat center;
 }
 
-button.add, button.bad, button.delete, button.edit, button.good, button.key, button.kunde, button.ok, button.open-new-tab, button.recht, button.zahnrad {
+button.add, button.bad, button.delete, button.edit, button.euro, button.good, button.key, button.kunde, button.minus,
+button.ok, button.ok2, button.open-new-tab, button.recht, button.zahnrad {
   background-color: #1a8cff;
   float: none;
   height: 30px;
