--- a/src/main/resources/static/themes/css/style.css
+++ b/src/main/resources/static/themes/css/style.css
@@ -59,6 +59,10 @@ input.success {
   background-color: #DFF2BF !important;
 }
 
+input.warning {
+  background-color: #FEEFB3 !important;
+}
+
 .hide {
   display: none;
 }
