Kunde und Reparaturicon optisch besser anordnen

--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -8,6 +8,11 @@ button {
   margin-left: 20px;
 }
 
+.btnSmall {
+  height: 20px !important;
+  width: 30px !important;
+}
+
 button.add {
   mask: url("../icons/add.svg") no-repeat center;
   -webkit-mask: url("../icons/add.svg") no-repeat center;
