Funktion zum Zusammenführen von Kundendatensätzen

--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -68,6 +68,11 @@ button.kunde {
   -webkit-mask: url("../icons/kunde.svg") no-repeat center;
 }
 
+button.kunden {
+  mask: url("../icons/kunden.svg") no-repeat center;
+  -webkit-mask: url("../icons/kunden.svg") no-repeat center;
+}
+
 button.minus {
   mask: url("../icons/minus.svg") no-repeat center;
   -webkit-mask: url("../icons/minus.svg") no-repeat center;
@@ -109,7 +114,7 @@ button.zahnrad {
 }
 
 button.add, button.bad, button.delete, button.duplicate, button.edit, button.email,
-button.euro, button.good, button.key, button.kunde, button.minus,
+button.euro, button.good, button.key, button.kunde, button.kunden, button.minus,
 button.ok, button.ok2, button.open-new-tab, button.recht, button.zahnrad {
   background-color: #1a8cff;
   float: none;
