Seiten zum Erstellen/Bearbeiten von Angeboten hinzugefügt

--- a/src/main/resources/static/themes/css/style.css
+++ b/src/main/resources/static/themes/css/style.css
@@ -47,6 +47,10 @@ input, select, textarea {
   height: 25px;
 }
 
+textarea.big {
+  height: 150px;
+}
+
 input.error {
   background-color: #FFD2D2 !important;
 }
