--- a/src/main/resources/static/themes/css/auftrag.css
+++ b/src/main/resources/static/themes/css/auftrag.css
@@ -3,6 +3,15 @@
   font-size: 12px;
 }
 
+#angebot-drucken {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+.font15 {
+  font-size: 15px;
+}
+
 .font16 {
   font-size: 16px;
 }
