Bestellungen um Anruf- und Warenbestellinformationen erweitert

--- a/src/main/resources/static/themes/css/bestellung.css
+++ b/src/main/resources/static/themes/css/bestellung.css
@@ -92,6 +92,10 @@ hr.header {
   widht: 100%;
 }
 
+.row-border td {
+  border-bottom: 1px solid black;
+}
+
 footer {
   background-color: white;
   position: fixed;
