Rechnungssuche erweitert um Kontrollkästchen, ob Angebote, Reparaturen, Bestellungen zur Rechnung hinterlegt sind

--- a/src/main/resources/static/themes/css/radio.css
+++ b/src/main/resources/static/themes/css/radio.css
@@ -54,6 +54,10 @@
   background-color: #2196F3;
 }
 
+.container input[disabled] ~ .checkMark  {
+  background-color: #ededed;
+}
+
 .checkMark:after {
   content: "";
   position: absolute;
