Übersicht Bestellungen - Spalte Beschreibung hinzugefügt, nach 350px mit ... abschneiden+

--- a/src/main/resources/static/themes/css/grid.css
+++ b/src/main/resources/static/themes/css/grid.css
@@ -63,3 +63,10 @@ th.active .arrow {
   border-right: 4px solid transparent;
   border-top: 4px solid #fff;
 }
+
+.overflow {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
