Rotes Informationsicon in Kundenansicht anzeigen, wenn es sich um einen Problemkunden handelt

--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -68,6 +68,12 @@ button.good {
   -webkit-mask: url("../icons/good.svg") no-repeat center;
 }
 
+button.i {
+  background-color: #D8000C !important;
+  mask: url("../icons/info.svg") no-repeat center;
+  -webkit-mask: url("../icons/info.svg") no-repeat center;
+}
+
 button.key {
   mask: url("../icons/key.svg") no-repeat center;
   -webkit-mask: url("../icons/key.svg") no-repeat center;
@@ -144,7 +150,7 @@ button.zahnrad {
 }
 
 button.add, button.angebot, button.bestellung, button.bad, button.delete, button.duplicate, button.edit, button.email,
-button.euro, button.good, button.key, button.kunde, button.kunden, button.lieferschein, button.minus,
+button.euro, button.good, button.i, button.key, button.kunde, button.kunden, button.lieferschein, button.minus,
 button.ok, button.ok2, button.open-new-tab, button.open-storno, button.recht, button.showStorno, button.storno, button.zahnrad {
   background-color: #1a8cff;
   float: none;
