--- a/src/main/resources/static/themes/css/grid.css
+++ b/src/main/resources/static/themes/css/grid.css
@@ -16,6 +16,13 @@ table tr:nth-child(even) td {
   padding: 5px 10px;
 }
 
+table th:not(.tableNavi) {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+}
+
 th {
   background-color: #1A8CFF;
   color: rgba(255,255,255,0.66);
