--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -34,6 +34,12 @@ button.bad {
   -webkit-mask: url("../icons/bad.svg") no-repeat center;
 }
 
+button.bad_reparatur {
+  background-color: #D8000C !important;
+  mask: url("../icons/bad_reparatur.svg") no-repeat center;
+  -webkit-mask: url("../icons/bad_reparatur.svg") no-repeat center;
+}
+
 button.delete {
   mask: url("../icons/delete.svg") no-repeat center;
   -webkit-mask: url("../icons/delete.svg") no-repeat center;
@@ -66,6 +72,11 @@ button.error {
 button.good {
   mask: url("../icons/good.svg") no-repeat center;
   -webkit-mask: url("../icons/good.svg") no-repeat center;
+}
+
+button.good_reparatur {
+  mask: url("../icons/good_reparatur.svg") no-repeat center;
+  -webkit-mask: url("../icons/good_reparatur.svg") no-repeat center;
 }
 
 button.i {
@@ -154,8 +165,8 @@ button.zahnrad {
   -webkit-mask: url("../icons/zahnrad.svg") no-repeat center;
 }
 
-button.add, button.angebot, button.bestellung, button.bad, button.delete, button.duplicate, button.edit, button.email,
-button.euro, button.good, button.i, button.key, button.kunde, button.kunden, button.lieferschein, button.minus,
+button.add, button.angebot, button.bestellung, button.bad, button.bad_reparatur, button.delete, button.duplicate, button.edit, button.email,
+button.euro, button.good, button.good_reparatur, button.i, button.key, button.kunde, button.kunden, button.lieferschein, button.minus,
 button.ok, button.ok2, button.open-new-tab, button.open-storno, button.recht, button.showStorno, button.storno,
 button.vorlage, button.zahnrad {
   background-color: #1a8cff;
