--- a/src/main/resources/static/themes/css/button.css
+++ b/src/main/resources/static/themes/css/button.css
@@ -110,6 +110,11 @@ button.minus {
   -webkit-mask: url("../icons/minus.svg") no-repeat center;
 }
 
+button.neu {
+  mask: url("../icons/neu.svg") no-repeat center;
+  -webkit-mask: url("../icons/neu.svg") no-repeat center;
+}
+
 button.ok {
   mask: url("../icons/ok_.svg") no-repeat center;
   -webkit-mask: url("../icons/ok_.svg") no-repeat center;
@@ -167,7 +172,7 @@ button.zahnrad {
 
 button.add, button.angebot, button.bestellung, button.bad, button.bad_reparatur, button.delete, button.duplicate, button.edit, button.email,
 button.euro, button.good, button.good_reparatur, button.i, button.key, button.kunde, button.kunden, button.lieferschein, button.minus,
-button.ok, button.ok2, button.open-new-tab, button.open-storno, button.recht, button.showStorno, button.storno,
+button.neu, button.ok, button.ok2, button.open-new-tab, button.open-storno, button.recht, button.showStorno, button.storno,
 button.vorlage, button.zahnrad {
   background-color: #1a8cff;
   float: none;
@@ -181,6 +186,11 @@ button.vorlage, button.zahnrad {
 
 button.angebot.disabled, button.bestellung.disabled, button.euro.disabled, button.vorlage.disabled, button.zahnrad.disabled {
   background-color: #a9a9a9;
+  cursor: default;
+}
+
+button.neu {
+  background-color: FF0000;
   cursor: default;
 }
 
